[package]
name = "solana-launchpad"
version = "0.1.0"
description = "Solana Launchpad"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library/launchpad"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_launchpad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test = []
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = {version = "0.25.0", features = ["init-if-needed"]}
anchor-spl = "0.25.0"
solana-program = "1.10.29"
solana-address-lookup-table-program = "1.10.29"
solana-security-txt = "1.0.1"
pyth-sdk-solana = "0.4.2"
ahash = "0.7.6"
num-traits = "0.2.14"
num = "0.4.0"